<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVVMExamp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="quanlydiem">Quản Lý Điểm</string>
	<string name="hocky">Học Kỳ</string>
	<string name="monhoc">Môn Học</string>
	<string name="sotinchi">Số tín chỉ</string>
	<string name="diemquatrinh">Điểm Quá Trình</string>
	<string name="diemthi">Điểm Thi</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="message">Bạn chưa nhập đủ thông tin.</string>
	<string name="qua">Qua</string>
	<string name="hoclai">Học Lại</string>
	<string name="danhsachketquahoctap">Danh sách kết quả học tập</string>
	<string name="searchbymonhoc">Tìm kiếm theo tên môn học</string>
	<string name="themketqua">Thêm kết quả</string>
	<string name="chucnang">Chức năng.</string>
	<string name="sua">Chỉnh sửa dữ liệu.</string>
	<string name="xoa">Xóa dữ liệu.</string>
	<string name="xemchitiet">Xem chi tiết kết quả.</string>
	<string name="tongkethocky">Tổng kết học kì.</string>
	<string name="thoatdialog">Thoát dialog!</string>
	<string name="thoatungdung">Thoát ứng dụng!</string>
</resources>
